--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
 /*
-    Theme Name: AboutMe Child Theme
-	Theme URI: http://iampuneet.com/themes/about-
-	Description: AboutMe is a one-page about page child theme built on Genesis Framework.
+    Theme Name: DarkNight Child Theme
+	Description: DarkNight is a child theme built on Genesis Framework.
     Author: Puneet Sahalot
     Author URI: http://iampuneet.com/
  
     Version: 1.8
  
-    Tags: gray, white, one-column, left-sidebar, fixed-width, custom-background, custom-header, custom-menu
+    Tags: gray, white, one-column, two-columns, right-sidebar, fixed-width, full-width, custom-background, custom-header, custom-menu
  
     Template: genesis
     Template Version: 1.8
@@ -83,7 +82,7 @@ h6,
 p,
 select,
 textarea {
-	color: #333;
+	color: #fff;
 	font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
 	font-size: 16px;
 	font-weight: 300;
@@ -168,10 +167,6 @@ body {
 ------------------------------------------------------------ */
 
 #wrap {
-	-moz-box-shadow: 0 0 5px #999;
-	-webkit-box-shadow: 0 0 5px #999;
-	background-color: #fff;
-	box-shadow: 0 0 5px #999;
 	margin: 15px auto;
 	width: 960px;
 	padding: 0;
@@ -182,8 +177,10 @@ body {
 ------------------------------------------------------------ */
 
 #header {
+	background:#111;
 	margin: 0 auto;
 	min-height: 100px;
+	opacity:0.7;
 	width: 100%;
 }
 
@@ -254,53 +251,66 @@ body {
 
 /* Header / Primary / Secondary Navigation
 ------------------------------------------------------------ */
+#nav {
+	background:#111; 
+}
+
+#nav .wrap {
+	width:960px;
+	margin:0 auto;
+}
+
+#subnav, #subnav .wrap {
+	opacity:1;
+}
 
 .menu-primary,
 .menu-secondary,
-#header .menu {
-	background-color: #f5f5f5;
+#nav .menu {
+	background-color: #111;
 	clear: both;
-	color: #333;
+	color: #fff;
 	font-size: 14px;
 	margin: 0 auto;
 	overflow: hidden;
 	width: 100%;
 }
 
-#header .menu {
-	border: 1px solid #ddd;
+#nav .menu{
+	border-left: 1px solid #333;
+	border-right: 1px solid #333;
 	box-sizing: border-box;
 }
 
 .menu-primary {
-	border-bottom: 1px solid #ddd;
-	border-top: 1px solid #ddd;
+	border-bottom: 1px solid #333;
+	border-top: 1px solid #333;
 }
 
 .menu-secondary {
-	border-bottom: 1px solid #ddd;
+	border-bottom: 1px solid #333;
 	border-top: none;
 }
 
 .menu-primary ul,
 .menu-secondary ul,
-#header .menu ul {
+#nav .menuul {
 	float: left;
 	width: 100%;
 }
 
 .menu-primary li,
 .menu-secondary li,
-#header .menu li {
+#nav .menuli {
 	float: left;
 	list-style-type: none;
 }
 
 .menu-primary a,
 .menu-secondary a,
-#header .menu a {
-	border-right: 1px solid #ddd;
-	color: #333;
+#nav .menua {
+	border-right: 1px solid #333;
+	color: #fff;
 	display: block;
 	padding: 7px 15px 6px;
 	position: relative;
@@ -317,13 +327,13 @@ body {
 .menu-secondary .current_page_item a,
 .menu-secondary .current-cat a,
 .menu-secondary .current-menu-item a,
-#header .menu li a:active,
-#header .menu li a:hover,
-#header .menu .current_page_item a,
-#header .menu .current-cat a,
-#header .menu .current-menu-item a {
-	background-color: #fff;
-	color: #333;
+#nav .menuli a:active,
+#nav .menuli a:hover,
+#nav .menu.current_page_item a,
+#nav .menu.current-cat a,
+#nav .menu.current-menu-item a {
+	background-color: #333;
+	color: #fff;
 }
 
 .menu-primary li li a,
@@ -332,14 +342,14 @@ body {
 .menu-secondary li li a,
 .menu-secondary li li a:link,
 .menu-secondary li li a:visited,
-#header .menu li li a,
-#header .menu li li a:link,
-#header .menu li li a:visited {
+#nav .menuli li a,
+#nav .menuli li a:link,
+#nav .menuli li a:visited {
 	background: none;
-	background-color: #fff;
-	border: 1px solid #ddd;
+	background-color: #111;
+	border: 1px solid #333;
 	border-top: none;
-	color: #333;
+	color: #fff;
 	font-size: 12px;
 	padding: 9px 10px 8px;
 	position: relative;
@@ -351,15 +361,15 @@ body {
 .menu-primary li li a:hover,
 .menu-secondary li li a:active,
 .menu-secondary li li a:hover,
-#header .menu li li a:active,
-#header .menu li li a:hover {
-	background-color: #f5f5f5;
-	color: #333;
+#nav .menuli li a:active,
+#nav .menuli li a:hover {
+	background-color: #333;
+	color: #fff;
 }
 
 .menu-primary li ul,
 .menu-secondary li ul,
-#header .menu li ul {
+#nav .menuli ul {
 	height: auto;
 	left: -9999px;
 	margin: 0 0 0 -1px;
@@ -370,13 +380,13 @@ body {
 
 .menu-primary li ul a,
 .menu-secondary li ul a,
-#header .menu li ul a {
+#nav .menuli ul a {
 	width: 140px;
 }
 
 .menu-primary li ul ul,
 .menu-secondary li ul ul,
-#header .menu li ul ul {
+#nav .menuli ul ul {
 	margin: -36px 0 0 159px;
 }
 
@@ -392,14 +402,14 @@ body {
 
 ul.menu li:hover>ul,
 ul.menu li.sfHover ul,
-#header .menu li:hover>ul,
-#header .menu li.sfHover ul {
+#nav .menuli:hover>ul,
+#nav .menuli.sfHover ul {
 	left: auto;
 }
 
 .menu-primary li a.sf-with-ul,
 .menu-secondary li a.sf-with-ul,
-#header .menu li a.sf-with-ul {
+#nav .menuli a.sf-with-ul {
 	padding-right: 25px;
 }
 
@@ -461,7 +471,9 @@ ul.menu li.sfHover ul,
 ------------------------------------------------------------ */
 
 #inner {
+	background:#111;
 	margin: 0 auto;
+	opacity:0.7;
 	overflow: hidden;
 	padding: 20px;
 }
@@ -1230,8 +1242,9 @@ input:hover[type="submit"] {
 ------------------------------------------------------------ */
 
 #footer {
-	background-color: #f5f5f5;
-	border-top: 1px solid #ddd;
+	background-color: #111;
+	border-top: 1px solid #333;
+	color:#888;
 	clear: both;
 	font-size: 14px;
 	margin: 0 auto;
@@ -1245,6 +1258,7 @@ input:hover[type="submit"] {
 }
 
 #footer p {
+	color:#888;
 	font-size: inherit;
 }
 
@@ -1401,9 +1415,9 @@ div.gform_wrapper .gform_footer {
 	.menu-secondary li,
 	.menu-secondary li ul,
 	.menu-secondary li ul a,
-	#header .menu li,
-	#header .menu li ul,
-	#header .menu li ul a {
+	#nav .menuli,
+	#nav .menuli ul,
+	#nav .menuli ul a {
 		width: 100%;
 	}
 	
@@ -1428,7 +1442,7 @@ div.gform_wrapper .gform_footer {
 
 	.menu-primary li a,
 	.menu-secondary li a,
-	#header .menu li a {
+	#nav .menuli a {
 		margin: 0;
 		padding: 7px 3%;
 	}
@@ -1444,9 +1458,9 @@ div.gform_wrapper .gform_footer {
 	.menu-secondary li li a,
 	.menu-secondary li li a:link,
 	.menu-secondary li li a:visited,
-	#header .menu li li a,
-	#header .menu li li a:link,
-	#header .menu li li a:visited {
+	#nav .menuli li a,
+	#nav .menuli li a:link,
+	#nav .menuli li a:visited {
 		background: none;
 		color: #fff;
 		padding: 7px 3%;
@@ -1455,7 +1469,7 @@ div.gform_wrapper .gform_footer {
 
 	.menu-primary li ul,
 	.menu-secondary li ul,
-	#header .menu li ul {
+	#nav .menuli ul {
 		background: #333;
 		clear: both;
 		margin: 0;
@@ -1465,19 +1479,19 @@ div.gform_wrapper .gform_footer {
 
 	.menu-primary li ul ul,
 	.menu-secondary li ul ul,
-	#header .menu li ul ul {
+	#nav .menuli ul ul {
 		background: #666;
 	}
 
 	.menu-primary li ul ul ul,
 	.menu-secondary li ul ul ul,
-	#header .menu li ul ul ul {
+	#nav .menuli ul ul ul {
 		background: #999;
 	}
 
 	.menu-primary li ul ul,
 	.menu-secondary li ul ul,
-	#header .menu li ul ul {
+	#nav .menuli ul ul {
 		margin: 0;
 	}
 
